--- a/api/AiPlayground.Api/AiPlayground.Api.csproj
+++ b/api/AiPlayground.Api/AiPlayground.Api.csproj
@@ -8,12 +8,15 @@
 
   <ItemGroup>
     <Folder Include="Config\" />
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AiPlayground.Data\AiPlayground.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
