Integrated with Azure OpenAI, fixed some of the logic. Added types to actions so that we can process different action types in a sensible order.

--- a/api/AiPlayground.Api/AiPlayground.Api.csproj
+++ b/api/AiPlayground.Api/AiPlayground.Api.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>da76898f-3f8e-48f8-a000-c443320b1eef</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
   </ItemGroup>
